dark mode fix

--- a/src/app/pages/password-recovery/password-recovery.page.scss
+++ b/src/app/pages/password-recovery/password-recovery.page.scss
@@ -56,7 +56,7 @@ form{
 
 @media (min-width: 880px) {
     .generic-back-button{
-        left: 0;
+        left: 10;
         right: inherit;
     }
   }
