--- a/src/global.scss
+++ b/src/global.scss
@@ -25,10 +25,10 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
-span {
+/* span {
   color: var(--ion-color-medium);
   text-transform: inherit;
-}
+} */
 
 ion-title {
   color: var(--ion-color-medium);
@@ -77,7 +77,7 @@ main{
 .generic-back-button {
   text-transform: inherit !important;
   position: absolute;
-  right: 0;
+  right: 10;
   z-index: 2;
 
   ion-button {
